--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head> 
-        <title>arpit's personal site</title>
-
+        <title>arpit's notebook</title>
+        <p><h1>hey, am working on it</h1></p>
     </head>
 </html>
